<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#525252"
    android:id="@+id/orderHistoryConstraints"
    android:layout_marginBottom="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewOrderHistory"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,3:2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/movieHistoryImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@drawable/tnfc0nj3bzhjrgjhkked6mhbdq5__1_" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/movieNameHistoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cardViewOrderHistory"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Elevation" />

    <TextView
        android:id="@+id/movieHistoryYearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#E60F0F"
        android:padding="3dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/movieNameHistoryTextView"
        app:layout_constraintTop_toBottomOf="@+id/movieNameHistoryTextView"
        tools:text="1972" />

    <ImageView
        android:id="@+id/orderHistoryStarImageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/movieHistoryYearTextView"
        app:layout_constraintStart_toEndOf="@+id/movieHistoryYearTextView"
        app:layout_constraintTop_toTopOf="@+id/movieHistoryYearTextView"
        app:srcCompat="@drawable/star_outline" />

    <TextView
        android:id="@+id/movieHistoryRatingTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/orderHistoryStarImageView"
        app:layout_constraintStart_toEndOf="@+id/orderHistoryStarImageView"
        app:layout_constraintTop_toTopOf="@+id/orderHistoryStarImageView"
        tools:text="4.5"/>

    <Button
        android:id="@+id/orderHistoryReturnMovieButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/return_movie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cardViewOrderHistory" />

    <TextView
        android:id="@+id/dateRentedTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/date_rented"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/movieHistoryYearTextView"
        app:layout_constraintTop_toBottomOf="@+id/movieHistoryYearTextView" />

    <TextView
        android:id="@+id/returnDateTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/return_date"
        android:textColor="#F8F8F8"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/orderHistoryReturnMovieButton"
        app:layout_constraintStart_toStartOf="@+id/dateRentedTitleTextView"
        app:layout_constraintTop_toBottomOf="@+id/dateRentedTitleTextView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="1.1.2000"
        android:textColor="#FDFDFD"
        app:layout_constraintBottom_toBottomOf="@+id/dateRentedTitleTextView"
        app:layout_constraintStart_toEndOf="@+id/dateRentedTitleTextView"
        app:layout_constraintTop_toTopOf="@+id/dateRentedTitleTextView" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1.1.2000"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/returnDateTitleTextView"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/returnDateTitleTextView" />

    <ImageView
        android:id="@+id/orderHistoryWarningImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:srcCompat="@android:drawable/stat_sys_warning" />

</androidx.constraintlayout.widget.ConstraintLayout>